<resources>
    <string name="app_name">友语</string>
    <string name="slogan">掌中皆友，你言我语</string>
    <string name="login">登  录</string>
    <string name="more">更多</string>
    <string name="login_by_wechat">微信登录</string>
    <string name="login_by_weibo">微博登录</string>
    <string name="login_by_qq">QQ登录</string>
    <string name="register">注   册</string>
    <string name="pls_enter_pwd">请输入6~16位密码</string>
    <string name="pls_confirm_pwd">请再次确认密码</string>
    <string name="next_step">下一步</string>
    <string name="pls_enter_phone_num">请输入手机号码</string>
    <string name="pls_enter_nick">请输入昵称</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="submit">提交</string>
    <string name="system_setting">系统设置</string>
    <string name="add_friend">添加好友</string>
    <string name="friend_apply">好友申请</string>


    <!-- 上拉下拉 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">释放立即刷新</string>
    <string name="xlistview_header_hint_loading">正在刷新...</string>
    <string name="xlistview_header_last_time">上次更新：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="permission_storage">permission_storage</string>
    <string name="permission_accounts">permission_accounts</string>
    <string name="permission_phone">permission_phone</string>
    <string name="permission_location">permission_location</string>
    <string name="permission_audio">permission_audio</string>
    <string name="permission_message">"%1$s:%2$s.%3$s"</string>
    <string name="permission_camera">permission_camera</string>

    <!-- 权限相关 -->
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
</resources>
